# src/schema/participations/participations.schema.ts
@@ -29,7 +29,12 @@ const  ParticipationsSchema = new mongoose.Schema({
     eventInfo: {
         type: mongoose.Schema.Types.ObjectId,
         ref: "EventsSchema"
-      }
+      },
+    documentUrl: {
+        type: String,
+        required: false
+    }  
+
 });
 
 export const Participations= mongoose.model('Participations', ParticipationsSchema );
